Dev: Fix variable names and make icon alignment work.

--- a/scss/components/alert.scss
+++ b/scss/components/alert.scss
@@ -2,12 +2,39 @@
   display: inline-flex;
   border: 1px solid; // TODO: implement border configuration
 
+  .alert__icon {
+    &.alert__icon--top {
+      align-self: flex-start;
+    }
+
+    &.alert__icon--middle {
+      align-self: center;
+    }
+
+    &.alert__icon--bottom {
+      align-self: flex-end;
+    }
+  }
+
   .alert__content {
     flex: 1 1 auto;
   }
 
   .alert__dismiss {
     cursor: pointer;
+
+    &:not(.alert__dismiss--middle):not(.alert__dismiss--bottom),
+    &.alert__dismiss--top {
+      align-self: flex-start;
+    }
+
+    &.alert__dismiss--middle {
+      align-self: center;
+    }
+
+    &.alert__dismiss--bottom {
+      align-self: flex-end;
+    }
   }
 
   &.full-width {
